# solar_radiation_db

./: .gitignore  README.md  analyse_results.ipynb  config.yaml  database_benchmark_results.csv  main.py  protocol_queries.sql  pyproject.toml  test_queries.sql
benchmarker/: README.md  database_benchmark_analysis.ipynb  database_benchmark_results.csv  databases.py  main.py  pyproject.toml
benchmarker/bench/: __init__.py  bench.py  databases.py  queries.py  query_parser.py
benchmarker/docs/source/: bench.rst  conf.py  index.rst
scripts/: gcs_to_motherduck.py
src/: convert_h5_file.py  gcs_to_motherduck.py  gcs_to_motherduck_alt.py
src/test/: test.py  unit_test.py
test/: unit_test.py
