[project]
name = "database-crash-test"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "duckdb>=1.2.2",
    "google-cloud>=0.34.0",
    "h5py>=3.13.0",
    "ipykernel>=6.29.5",
    "nrel-rex>=0.3.1",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.4",
    "pymysql>=1.1.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.40",
    "sqlglot>=26.16.2",
]

[tool.uv.workspace]
members = [
    "benchmarker",
]
