[project]
name = "benchmarker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-sqlalchemy>=0.3.2",
    "cryptography>=44.0.2",
    "docker>=7.1.0",
    "duckdb-engine>=0.17.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.40",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.6",
]
black = [
    "ruff>=0.11.6",
]
