[project]
name = "benchmarker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-sqlalchemy>=0.3.2",
    "cryptography>=44.0.2",
    "docker>=7.1.0",
    "duckdb-engine>=0.17.0",
    "findspark>=2.0.1",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pymysql>=1.1.1",
    "pyspark>=3.5.5",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "sqlglot[rs]>=26.16.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.6",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]
